# HydroApps

./: .gitattributes  .gitconfig  .gitignore  .gitlab-ci.yml  Dockerfile.test  LICENSE  README.md  TODO  manage.py  pyproject.toml  requirements.txt  secretSettings_HydroApps.py.template  secretSettings_HydroApps.py.test  sync.ffs_lock
HydroApps/: admin.py  apps.py  models.py  sitemaps.py  tests_HydroApps.py  urls.py  views.py
RheiKlim/: api.py  models.py  serializers.py  sitemaps.py  urls.py  views.py
asgII/: models.py  sitemaps.py  urls.py  views.py
front-end/: eslint.config.js  i18next-scanner.config.cjs  index.js  package-lock.json  package.json  vite.config.js  webpack.config.cjs  webpack.config.js
internal/: apps.py  config.py  context_processor.py  models.py  sitemaps.py  tests_internal.py  urls.py  views.py
klimzuk/: models.py  serializers.py  urls.py  views.py
kombStRA/: apis.py  models.py  serializers.py  urls.py  views.py
kombstra/: apis.py  models.py  serializers.py  sitemaps.py  tests_kombstra.py  urls.py  views.py
main/: asgi.py  base_sitemap.py  context_processors.py  decorators.py  routers.py  settings.py  settings_test.py  sitemaps.py  urls.py  views.py  wsgi.py
my_auth/: admin.py  apps.py  backends.py  config.py  decorators.py  forms.py  models.py  sitemaps.py  tests.py  urls.py  views.py
sfi_demo/: apps.py  forms.py  sitemaps.py  tests_sfi_demo.py  tests_sfi_mockup.py  urls.py  views.py
sfi_mockup/: sitemaps.py  tests_sfi_mockup.py  urls.py  views.py
sri_bw/: apis.py  models.py  serializers.py  sitemaps.py  tests_sri_bw.py  urls.py  (+1 more)
(+483 files in other folders)
